--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "spryker/testify": "*"
   },
   "suggest": {
-    "spryker/sales": "^8.8.3"
+    "spryker/sales": "If you want to use PreSaveOrderHydratePluginInterface"
   },
   "autoload": {
     "psr-4": {
